# Learning_OpenGL

./: .gitignore  CMakeLists.txt  Diagram.class.violet.html  IFT3100H20_TP1_Grille.xlsx  OGL_ENGINE_DIAGRAM.class.violet.html  OGL_ENGINE_DIAGRAM.violet.html.class.violet.html  OGL_Engine diagram.class.violet.html  OGL_Engine.sln  README.md  video.osp
Dependencies/GLAD/glad/: glad.c  glad.h
Dependencies/GLEW/config/: config.guess
Dependencies/GLFW/include/GLFW/: glfw3.h
Dependencies/IMGUI/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_internal.h  imgui_widgets.cpp  imstb_truetype.h
Dependencies/IMGUI/examples/: imgui_impl_opengl3.cpp
Dependencies/STB_IMAGE/: stb_image.h  stb_image_write.h
OGL_Engine/: OGL_Engine.vcxproj  OGL_Engine.vcxproj.filters
res/: Arial.bff  font.fnt
res/shaders/: DefaultFragment.glsl  EdgeDetectionFragment.glsl  LightFragment.glsl  LightVertex.glsl  blurFragment.glsl  negativeFragment.glsl  negativeVertex.glsl
src/: BaseFragment.glsl  BaseVertex.glsl  Debug.h  main.cpp
src/app/Scenes/Demo3D/: SpacialSceneDemo.cpp
src/app/Scenes/Editor/: CameraWindow.h  Editor.h  EntityCreationWindow.cpp  EntityCreationWindow.h  PropertyWindow.cpp  PropertyWindow.h  SceneTreeWindow.h
src/app/Scenes/Test/: Chunk.cpp  Chunk.h  ChunkGenerator.cpp  ChunkLoader.cpp  ChunkLoader.h  ChunkManager.cpp  ChunkManager.h  ChunkRenderer.cpp  ChunkRenderer.h  Test.cpp  Test.h  Voxel.h  VoxelDictionary.h
src/engine/: API_ALL.h  Window.cpp  Window.h
src/engine/API/: API.h
src/engine/API/GL/: GL_API.cpp  GL_API.h  GL_Debug.cpp  GL_Debug.h
src/engine/API/VK/: VK_API.cpp  VK_API.h
src/engine/Core/: Canvas.cpp  Canvas.h  Debug.h  Engine.cpp  Engine.h  Input.cpp  Input.h  Inputs.cpp  Inputs.h  Log.cpp  Log.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SpacialScene.cpp  SpacialScene.h  Viewport.cpp  Viewport.h  Window.cpp  Window.h
src/engine/Core/Debug/: Debug.h  Log.h
src/engine/Core/Rendering/: BatchRenderer.cpp  BatchRenderer.h  FBO.h  Primitive.cpp  Primitive.h  RBO.cpp  RBO.h  Renderer.cpp  Renderer.h  SimpleRenderer.cpp  SimpleRenderer.h  Skybox.cpp  Skybox.h
src/engine/Data/: AtlasTexture.cpp  AtlasTexture.h  Color.cpp  Color.h  FBO.cpp  FBO.h  RBO.cpp  RBO.h  Texture.cpp  Texture.h
src/engine/Editor/: Editor.cpp  Editor.h
src/engine/Entities/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  FPSController.cpp  FPSController.h  MeshRenderer.cpp  MeshRenderer.h  Text.cpp  Text.h  Transform.cpp  Transform.h
src/engine/Entities/Canvas/: CanvasEntity.cpp  CanvasEntity.h  CanvasTransform.cpp  CanvasTransform.h  Ellipse.cpp  Ellipse.h  Image.cpp  Image.h  Line.cpp  Line.h  Point.cpp  Point.h  Rect.cpp  Rect.h  Text.cpp  Text.h
src/engine/Entities/Light/: Directionnal.cpp  Directionnal.h  DirectionnalLight.cpp  DirectionnalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
src/engine/Entities/Primitves/: Circle.cpp  Circle.h
src/engine/Entities/Spacial/: Camera.cpp  Camera.h  FPSController.cpp  FPSController.h  MeshRenderer.cpp  MeshRenderer.h  SpacialEntity.cpp  SpacialEntity.h  Transform.cpp  Transform.h
src/engine/Events/: CanvasResizeListener.h  KeyPressListener.h  ViewportResizeListener.h  WindowResizeListener.h  WindowSizeListener.h
src/engine/Geometry/: Geometry.cpp  Geometry.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Quad.cpp  Quad.h  VAO.cpp
src/engine/Geometry/data/: AtlasTexture.cpp  Text.h  Texture.h
src/engine/Geometry/shaders/: Shader.cpp
src/engine/Math/: BoundingBox.cpp  BoundingBox.h  Plane.cpp  Plane.h
src/engine/Ressources/: AtlasTexture.cpp  AtlasTexture.h  Color.cpp  Color.h  Cube.cpp  Cube.h  Mesh.cpp  Mesh.h  Quad.cpp  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/engine/Scenes/: ApplicationDrawing2D.cpp  ApplicationDrawing2D.h  BaseScene.cpp  BaseScene.h  SpacialSceneDemo.cpp  SpacialSceneDemo.h  TextTest.cpp  TextTest.h
src/engine/Shaders/: EntityMaterial.cpp  EntityMaterial.h  FontMaterial.cpp  FontMaterial.h  FontText.cpp  FontText.h  LightMaterial.cpp  LightMaterial.h  Material.cpp  Material.h  Mesh.cpp  Shader.cpp  Shader.h  TexturedMaterial.cpp  TexturedMaterial.h
src/engine/Test/: ApplicationDrawing2D.cpp  ApplicationDrawing2D.h  AtlasTextureTest.cpp  AtlasTextureTest.h  FullSceneTest.cpp  FullSceneTest.h  ImguiTest.cpp  ImguiTest.h  ImportModelTest.cpp  ImportModelTest.h  LAB2.cpp  LAB2.h  LAB3.cpp  LAB3.h  LAB4.cpp  LAB4.h  LAB5.cpp  LAB5.h  LAB5_Sim.cpp  LAB5_Sim.h  LSystem.cpp  LSystem.h  NoiseTextureCreation.cpp  NoiseTextureCreation.h  PerformanceTest.cpp  PerformanceTest.h  PrimitivesTest.cpp  PrimitivesTest.h  RandomCubes.cpp  RandomCubes.h  SpacialSceneTest.cpp  SpacialSceneTest.h  TestRefactor.cpp  TestRefactor.h  TextTest.cpp  TextTest.h  TextureCreationTest.cpp  TextureCreationTest.h
src/engine/Utils/: Geometry.cpp  Geometry.h  SimplexNoise.cpp  StringUtils.cpp  StringUtils.h  Thread.cpp  Thread.h  TimeUtils.cpp  TimeUtils.h  Timer.cpp  Timer.h
src/engine/core/: Engine.cpp  Engine.h  Game.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Window.cpp  Window.h
src/engine/entities/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  FPSController.h  MeshRenderer.cpp  MeshRenderer.h  SpriteRenderer.cpp  SpriteRenderer.h  Transform.cpp  Transform.h
src/engine/graphics/: DefaultRenderer.cpp  DefaultRenderer.h  Drawable.cpp  Drawable.h  Geometry.cpp  Geometry.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderer.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp
src/engine/math/: mat4.cpp  mat4.h  quat.h  vec3.cpp  vec3.h
src/engine/shaders/: ShaderProgram.cpp  ShaderProgram.h
src/engine/sml/: mat4.cpp  mat4.h  quat.cpp  quat.h  sml.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
src/engine/test/: CameraController.cpp  CameraController.h  FPSController.cpp  FPSController.h  MathTest.cpp  MathTest.h  RandomCubes.cpp  RandomCubes.h  Test.cpp  Test.h  TextureCreation.cpp  TextureCreation.h
src/engine/utils/: Color.cpp  Color.h  SimplexNoise.cpp  StringUtils.cpp  TimeUtils.cpp  TimeUtils.h  Timer.cpp  Timer.h
(+135 files in other folders)
